--- a/Backend/package.json
+++ b/Backend/package.json
@@ -28,7 +28,10 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "file-system": "^2.2.2",
+    "hls-server": "^1.5.0",
     "jsonwebtoken": "^8.5.1",
-    "node-fetch": "^3.1.0"
+    "node-fetch": "^3.1.0",
+    "node-hls-server": "^1.2.1",
+    "password-hash": "^1.2.2"
   }
 }
